# Mihomo

./: .gitmodules  CMakeLists.txt  README.md
assets/: app.qrc
assets/icons/: icons.qrc
assets/icons/dark/: dark_icons.qrc  index.theme
assets/qml/: QWKButton.qml  TitleBar.qml  main.qml  qml.qrc
assets/qml/ControlBar/: ControlBar.qml  NetworkSpeed.qml  qmldir
assets/qss/: dark.qss
cmake/: app.cmake  qrc.cmake
i18n/: ClashMeta-GUI_zh_CN.ts
qml/: ContentPage.qml  Theme.qml  main.qml
qml/ControlBar/: ControlBar.qml
qml/Page/: T_Home.qml  T_Proxies.qml
qml/Page/Home/: BindAddressDialog.qml  HomeItemArea.qml
qml/Page/Proxies/: DirectModePage.qml  GroupItem.qml  GroupToolBar.qml  ModeButton.qml  ProxiesIconButton.qml  ProxyItem.qml  ProxyModeSelector.qml  RuleModePage.qml
qml/TitleBar/: TitleBar.qml
qml/WindowBar/: WindowBar.qml
src/: Application.cpp  Application.h  CMakelists.txt  ClashMetaProcess.cpp  ClashMetaProcess.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Window.cpp  Window.h  app.aps  app.rc  main.cpp
src/Components/: HttpClient.cpp  HttpClient.h  ObjectEvent.cpp  ObjectEvent.h  TranslateHelper.cpp  TranslateHelper.h  collapsiblewidget.cpp  collapsiblewidget.h
src/Configurator/: ClashConfigurator.cpp  ClashConfigurator.h  ClashRuntimeConfigure.cpp  ClashRuntimeConfigure.h  YamlBuilder.cpp  YamlBuilder.h
src/Connections/: ConnectionsModel.cpp  ConnectionsModel.h
src/Core/: APIClient.cpp  APIClient.h  KernelABIChecker.cpp  KernelABIChecker.hpp  KernelInteractions.cpp  KernelInteractions.hpp  SysProxyConfigurator.cpp  SysProxyConfigurator.hpp
src/GUI/: MainWindow.cpp  MainWindow.h  MainWindow.ui  TabButtonModel.cpp  TabButtonModel.h  TabButtonWidget.cpp  TabButtonWidget.h
src/GUI/ControlBar/: ControlBar.cpp  ControlBar.h  ControlBar.ui
src/GUI/General/: GeneralWidget.cpp  GeneralWidget.h  GeneralWidget.ui
src/GUI/LogViewer/: LogViewer.cpp  LogViewer.h  LogViewer.ui
src/GUI/WindowBar/: WindowBar.cpp  WindowBar.h  WindowBar.ui  WindowButton.cpp  WindowButton.h
src/Proxies/: ProxiesGroupItemModel.cpp  ProxiesGroupItemModel.h  ProxiesGroupModel.cpp  ProxiesGroupModel.h
src/WindowBar/: WindowButton.cpp  WindowButton.h
